- Added a new option in 'port.rrd' to enable/disable background red color for
  each port monitored. [#182]
- Added to be able to change the real names in the Voltage graph. [#183]
- From now on the perl-HTTP-Server-Simple module only is loaded if the HTTP
  built-in is enabled. This will permit to separate the HTTP built-in in a
  different package.
- Fixed an undeclared global symbol "$imgfmt_lc" in 'traffacct.pm'.
- Fixed the MIME type of graphs in 'emailreports.pm' and in 'traffacct.pm' to
  honor the 'image_format' option. [#174]
- Fixed in 'emailreports.pm' to name each attached graph correctly.
- Fixed the message 'Odd number of elements in hash assignment' in
  HTTPServer.pm line 58, generated by a malformed line in the 'htpasswd' file.
  Now it warns about such malformed line in the HTTP built-in log.
- Fixed to honour the change of names in the zoomed in graph of Cores. [#183]


3.9.0  - 14-Oct-2016
====================
- Added a complete graph for Linux Traffic Control with the 'tc' command. [#74]
- Added a complete graph for Chrony using the 'chronyc' command.
- Added a complete graph for generic sensors (in /sys/devices). [#159]
- Added the option 'cmd' in 'libvirt.pm' in order to be able to execute a
  custom command like 'virsh -r -c qemu:///session'.
  	(suggested by Pavel Bauer, pbauer AT algotech.cz)
- Added in 'libvirt.pm' the ability to support multiple disks and network
  interfaces for each virtual machine.
  	(suggested by Pavel Bauer, pbauer AT algotech.cz)
- Added in 'du.pm' the new 'extra_args' option to be able to include extra
  arguments to the 'du' command.
  	(suggested by Pete Perfetti, pete.perfetti AT protonmail.com)
- Added the new option 'priority' to set the priority value in which Monitorix
  will run.
- Added the new option 'image_format' to specify the file format of each
  generated graph. [#132]
- Added name substring match in 'process.pm'. [#136]