@@ -1,0 +1,74 @@
+<html lang="en" dir="ltr">
+  <head>
+     <title>Monitorix : Rapport du Trafic Internet</title>
+     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+     <meta http-equiv="content-language" content="en">
+  </head>
+  <body bgcolor="#ffffff">
+  <table cellspacing="0" cellpadding="0" width="600" border="0">
+    <tr>
+      <td colspan="2">
+        <img alt="Monitorix" src="cid:image_01" border="0">
+	<br>
+	<hr>
+	<p>
+	<p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2" valign="top" align="left" width="490">
+        <p>
+        <font face="Verdana, sans-serif" size="-1">
+Cher utilisateur,
+        <p>
+Le graphique ci-après montre le trafic Internet généré par votre ordinateur durant le dernier mois :
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <br>
+        <img src="cid:image_02" align="center" border="0">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <center>
+        <font face="Verdana, sans-serif" size="2">
+        <b>
+Trafic Internet mensuel
+        </b>
+        </font>
+        </center>
+        <br>
+      </td>
+    </tr>
+    <tr>
+    <td colspan="2" valign="top" align="left" width="590">
+      <pre>
+<iframe style='background-color: #eeeeee;' src="cid:text_01" width="90%" height="550px" frameborder="0"></iframe>
+      </pre>
+      <font face="Verdana, sans-serif" size="-1">
+Merci de votre confiance.
+      <br>
+      </font>
+      <br>
+
+      <table cellspacing="0" cellpadding="0" width="100%" border="0">
+      <tr>
+        <td valign="top" align="left">
+          <font face="Verdana, sans-serif" size="-1">
+Cordialement,
+          <br>
+Votre nom ici
+          <br>
+<a href="MAILTO:you@example.com">you@example.com</a><br>
+<a href="http://www.example.com">http://www.example.com</a>
+          </font>
+        </td>
+      </tr>
+      </table>
+    </td>
+    </tr>
+  </table>
+  </body>
+</html>
